# crypto-quant-mvp

./: .gitignore  docker-compose.dev.yml  pyproject.toml  setup_project.sh  test_backtest_integration.sh
backup_old_files/: old_backtesting.py  old_data_access.py  old_main.py  old_test_api_endpoints.py
infra/db/: init.sql
notebooks/: crypto_data_analysis.ipynb  ideas.ipynb
services/analytics/: data_access.py  ml_data_prep.py  spark_data_access.py  test_data_access.py
services/api/: Dockerfile  pyproject.toml
services/api/app/: dependencies.py  main.py  models.py
services/api/app/routers/: backtesting.py  market_data.py
services/backtest-engine/: Dockerfile  docker-compose-service.yml  integration_test.py  integration_test_results.json  pyproject.toml  requirements.txt  run_api_server.py  run_integration_tests.py
services/backtest-engine/examples/: api_demo.py  risk_management_demo.py  statistics_demo.py  strategy_comparison.py
services/backtest-engine/src/: __init__.py
services/backtest-engine/src/api/: __init__.py  backtest_api.py  health_api.py  main.py  statistics_api.py  timescale_api.py
services/backtest-engine/src/core/: __init__.py  backtest_executor.py  enhanced_portfolio_manager.py  portfolio_manager.py  trade_engine.py
services/backtest-engine/src/database/: __init__.py  timescale_connector.py
services/backtest-engine/src/risk/: risk_manager.py
services/backtest-engine/src/signals/: __init__.py  signal_engine.py
services/backtest-engine/src/statistics/: __init__.py  statistics_engine.py
services/backtest-engine/tests/: test_database_integration.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4_api.py  test_real_db_integration.py  test_timescale_integration.py
services/backtest-engine/tests/mathematical_validation/: test_advanced_mathematical_validation.py  test_mathematical_validation.py
services/backtest-engine/tests/verification/: test_comprehensive_stop_loss.py  test_final_verification.py  test_stop_loss_precision.py  test_stop_loss_verification.py
services/bulk-loader/: Dockerfile  pyproject.toml
services/bulk-loader/app/: main.py
services/data-recovery/: Dockerfile  pyproject.toml
services/data-recovery/app/: __init__.py  main.py
services/db-writer/: Dockerfile  pyproject.toml
services/db-writer/app/: main.py
services/frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
services/frontend/archived_files/charts_docs/: BacktestChart.tsx  BacktestChartNew.tsx
services/frontend/src/: App.css  App.tsx  main.tsx
services/frontend/src/components/: Navigation.tsx  ThemeToggle.tsx
services/frontend/src/components/backtesting/: BacktestChart_v5.tsx  BacktestChart_v5_backup.tsx  BacktestParametersPanel.tsx  BacktestResults.tsx  DataSyncDebug.tsx  StrategyBuilder.tsx
services/frontend/src/components/backtesting/charts/: BacktestChart.module.css  BacktestChart.tsx  ChartContainer.tsx  PaneManager.ts  SeriesComponents.tsx  hooks.ts  index.ts  types.ts  utils.ts
services/frontend/src/hooks/: useChart.ts  useChartData.ts  useChart_simple.ts  useTheme.ts  useUtils.ts
services/frontend/src/pages/: Backtesting.tsx  Dashboard.tsx  Layout.tsx
services/frontend/src/types/: backtesting.ts
services/historical-collector/: Dockerfile  pyproject.toml
services/historical-collector/app/: __init__.py  main.py
services/ingestor/: Dockerfile  pyproject.toml
services/ingestor/app/: main.py
services/timescaledb/: Dockerfile
services/vectorbt/: Dockerfile  Dockerfile.api  pyproject.toml
services/vectorbt/app/: __init__.py  config.py  database.py  database_monitor.py  dependencies.py  indicators_processor.py  main.py  main_api.py  models.py  pipeline_orchestrator.py
services/vectorbt/app/backtesting/: concrete_strategies.py  indicator_engine.py  strategies.py  strategy_base.py  strategy_builder.py  strategy_executor.py  utils.py
services/vectorbt/app/indicators/: __init__.py  processor.py
services/vectorbt/test/: test_indicators.py  test_integration.py
spark-jobs/: ohlcv_aggregator.py
tests/: setup.py  test_integration.py  test_summary.py
tests/api/: test_endpoints_live.py  test_endpoints_new.py  test_market_data.py  test_market_data_simple.py  test_models.py  test_routers.py
tests/backtest_verification/: test_5_percent_stop_loss.py  test_short_only.py  test_stop_loss_precision.py  test_stop_loss_take_profit.py
tests/integration/: test_all_fixes.py  test_backend_fixes.py
tests/performance_test/: indicators_cython.c  indicators_cython.pyx  performance_comparison.ipynb
tests/vectorbt/: test_utils.py
