[project]
name = "crypto-quant-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "psycopg>=3.2.9",
    "psycopg-pool>=3.2.6",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0",
]
