# services/api/pyproject.toml
# Defines the project metadata and dependencies for our main backend API service.

[project]
name = "quant-api"
version = "0.1.0"
description = "FastAPI backend for the Quant-MVP platform, serving data and backtesting results."
authors = [{ name = "Jaden J.", email = "your_email@example.com" }]
requires-python = ">=3.11"
dependencies = [
    # A modern, high-performance web framework for building APIs with Python.
    # Its key features are speed, automatic data validation, and interactive documentation.
    "fastapi==0.111.0",

    # A lightning-fast ASGI server, used to run our FastAPI application.
    "uvicorn[standard]==0.29.0",

    # The modern, high-performance PostgreSQL driver for Python 3.
    "psycopg[binary,pool]==3.1.19",

    # Pydantic is used by FastAPI for data validation and settings management.
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",

    # For a professional setup, we add CORS middleware to allow our future
    # frontend application (running on a different port) to securely access this API.
    "uvloop==0.19.0",
]

[tool.uv]
# This section can be used for uv-specific configurations in the future.
