[project]
name = "backtest-engine_service"
version = "0.1.0"
description = "High-performance quantitative backtesting engine using FastAPI and numba"
authors = [{ name = "Jaden J.", email = "your_email@example.com" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # FastAPI and async database
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "asyncpg>=0.29.0",
    # HTTP client for health checks
    "requests>=2.31.0",
    # Database connection
    "psycopg[binary]==3.1.19",
    "psycopg-pool==3.2.1",
    # Data validation
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    # Environment variables
    "python-dotenv>=1.1.1",
    # Core data processing
    "numpy==2.2.0",
    "pandas==2.3.0",
    "vectorbt>=0.27.0",
    "numba==0.61.2",
    # Technical indicators (use ta library for standard indicators)
    "ta>=0.11.0",
    # Add scipy for statistical calculations
    "scipy>=1.11.0",
    # HTTP client for inter-service communication
    "httpx>=0.25.0",
    # Additional utilities
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
]

[tool.uv]
