[project]
name = "historical-collector"
version = "0.1.0"
description = "Hybrid Historical Data Collection Service - Fast bulk load + intelligent gap filling"
authors = [{ name = "Crypto Quant MVP", email = "dev@cryptoquant.example" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psycopg[binary]>=3.1.0",
    "requests>=2.31.0",
    "confluent-kafka>=2.3.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
