[project]
name = "vectorbt_service"
version = "0.1.0"
description = "High-performance technical indicators service using vectorbt"
authors = [{ name = "Jaden J.", email = "your_email@example.com" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Database connection
    "psycopg[binary]==3.1.19",
    "psycopg-pool==3.2.1",
    # Data validation
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    # Environment variables
    "python-dotenv>=1.1.1",
    # Core data processing
    "numpy==2.2.0",
    "pandas==2.3.0",
    "vectorbt>=0.27.0",
    "numba==0.61.2",
    # Technical indicators (use ta library for standard indicators)
    "ta>=0.11.0",
    # Add scipy for statistical calculations
    "scipy>=1.11.0",
]

[tool.uv]
